force-app/main/default/objects/Case/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <formula>TEXT(Product__r.Product_Center__c)</formula>
    <label>Product Center</label>
    <type>Text</type>
</CustomField>