force-app/main/default/objects/Case/fields/Product_Info__c.field-meta.xml
<CustomField>
    <fullName>Product_Info__c</fullName>
    <description>Product info from webform product variable: https://www.u-blox.com/en/limited-use-license-agreement?referral=Future&amp;product=LILY-W1</description>
    <label>Product Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>