force-app/main/default/objects/Case/fields/Product_Name_Short__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Short__c</fullName>
    <formula>Product__r.Product_Name_Short__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name Short</label>
    <type>Text</type>
</CustomField>