force-app/main/default/objects/Case/fields/Record_Counter__c.field-meta.xml
<CustomField>
    <fullName>Record_Counter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>