force-app/main/default/objects/Case/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <description>Product info from webform referral variable: https://www.u-blox.com/en/limited-use-license-agreement?referral=Future&amp;product=LILY-W1</description>
    <label>Referral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>