force-app/main/default/objects/Case/fields/Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Registration_No__c</fullName>
    <label>Registration No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>