force-app/main/default/objects/Case/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To reference the related lead with this case.</description>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>RelatedLeads</relationshipName>
    <type>Lookup</type>
</CustomField>