force-app/main/default/objects/Case/fields/Resolved_FAE__c.field-meta.xml
<CustomField>
    <fullName>Resolved_FAE__c</fullName>
    <formula>if ( and (text(Status) = &quot;Closed&quot;, isblank( Date_Escalated_by_FAE__c), isblank( Date_Escalated_by_TM__c)), 1,0)</formula>
    <inlineHelpText>1 if case could be closed by FAE without escalation to TM or HQ, 0 else</inlineHelpText>
    <label>Resolved FAE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>