force-app/main/default/objects/Case/fields/Resolved_HQ__c.field-meta.xml
<CustomField>
    <fullName>Resolved_HQ__c</fullName>
    <formula>if ( and (text(Status) = &quot;Closed&quot;, not(isblank( Date_Escalated_by_FAE__c)), not(isblank( Date_Escalated_by_TM__c))), 1,0)</formula>
    <inlineHelpText>1 if case was escalated to HQ, 0 else</inlineHelpText>
    <label>Resolved HQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>