force-app/main/default/objects/Case/fields/Return_To__c.field-meta.xml
<CustomField>
    <fullName>Return_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Made to return the Case to the person who added the last comment.</description>
    <inlineHelpText>Made to return the Case to the person who added the last comment.</inlineHelpText>
    <label>Return To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>