force-app/main/default/objects/Case/fields/Rigado_Activity__c.field-meta.xml
<CustomField>
    <fullName>Rigado_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Imported from Rigado Zendesk</description>
    <inlineHelpText>Imported from Rigado Zendesk</inlineHelpText>
    <label>Rigado Activity</label>
    <type>Checkbox</type>
</CustomField>