force-app/main/default/objects/Case/fields/Send_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Send_Case_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, new Case Comment will be emailed to Case Initiator.</description>
    <inlineHelpText>If checked, new Case Comment will be emailed to Case Initiator.</inlineHelpText>
    <label>Send Case Comment</label>
    <type>Checkbox</type>
</CustomField>