force-app/main/default/objects/Case/fields/Send_Notification_Mail__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked by buttons when Case has been escalated or returned. This triggers a notification mail to be sent to the new owner.</inlineHelpText>
    <label>Send Notification Mail</label>
    <type>Checkbox</type>
</CustomField>