force-app/main/default/objects/Case/fields/Set_Case_Escalated_Timestamp_by_TM__c.field-meta.xml
<CustomField>
    <fullName>Set_Case_Escalated_Timestamp_by_TM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Case Escalated Timestamp by TM</label>
    <type>Checkbox</type>
</CustomField>