force-app/main/default/objects/Case/fields/Set_Case_Returned_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Set_Case_Returned_Timestamp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Case Returned Timestamp</label>
    <type>Checkbox</type>
</CustomField>