force-app/main/default/objects/Case/fields/SplitedFrom__c.field-meta.xml
<CustomField>
    <fullName>SplitedFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Splited From</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Splitted Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>