force-app/main/default/objects/Case/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>CASE(Status, 
&quot;New&quot;, IMAGE(&quot;/img/func_icons/util/mailFrontEnv16.gif&quot;,&quot;New&quot;), 
&quot;Working&quot;, IMAGE(&quot;/img/func_icons/util/pencil12.gif&quot;,&quot;Working&quot;), 
&quot;New Input&quot;, IMAGE(&quot;/img/func_icons/util/mailCloseEnv16.gif&quot;,&quot;New Input&quot;),
&quot;Waiting For Response&quot;, IMAGE(&quot;/img/staleValue.gif&quot;,&quot;Waiting For Response&quot;), 
&quot;Closed&quot;, IMAGE(&quot;/img/func_icons/util/checkmark16.gif&quot;,&quot;Closed&quot;), 
IMAGE(&quot;/s.gif&quot;, &quot;No Status Flag&quot;))</formula>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>