force-app/main/default/objects/Case/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <description>The technology of the product.</description>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GNSS</fullName>
            </value>
            <value>
                <fullName>Short Range</fullName>
            </value>
            <value>
                <fullName>Cellular</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>