force-app/main/default/objects/Case/fields/Temp_From__c.field-meta.xml
<CustomField>
    <fullName>Temp_From__c</fullName>
    <label>Temp From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>