force-app/main/default/objects/Case/fields/Temp_To__c.field-meta.xml
<CustomField>
    <fullName>Temp_To__c</fullName>
    <label>Temp To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>