force-app/main/default/objects/Case/fields/Web_Address__c.field-meta.xml
<CustomField>
    <fullName>Web_Address__c</fullName>
    <description>From e-NDA form (web-to-case)</description>
    <inlineHelpText>From e-NDA form (web-to-case)</inlineHelpText>
    <label>Web Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>