force-app/main/default/objects/Case/fields/Web_City__c.field-meta.xml
<CustomField>
    <fullName>Web_City__c</fullName>
    <description>From e-NDA form (web-to-case)</description>
    <inlineHelpText>From e-NDA form (web-to-case)</inlineHelpText>
    <label>Web City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>