force-app/main/default/objects/Case/fields/Web_Company_in_local_language__c.field-meta.xml
<CustomField>
    <fullName>Web_Company_in_local_language__c</fullName>
    <description>From e-NDA form (web-to-case)</description>
    <inlineHelpText>From e-NDA form (web-to-case)</inlineHelpText>
    <label>Web Company (in local language)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>