force-app/main/default/objects/Case/fields/Web_Country__c.field-meta.xml
<CustomField>
    <fullName>Web_Country__c</fullName>
    <description>From e-NDA form (web-to-case)</description>
    <inlineHelpText>From e-NDA form (web-to-case)</inlineHelpText>
    <label>Web Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>