force-app/main/default/objects/Case/fields/Web_e_NDA_Read__c.field-meta.xml
<CustomField>
    <fullName>Web_e_NDA_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From web form (e-NDA or e-LULA-M, web-to-case). Checked if the customer has read the Agreement.</description>
    <inlineHelpText>From web form (e-NDA or e-LULA-M, web-to-case). Checked if the customer has read the Agreement.</inlineHelpText>
    <label>Web Agreement Read</label>
    <type>Checkbox</type>
</CustomField>