force-app/main/default/objects/Case/fields/Web_Function__c.field-meta.xml
<CustomField>
    <fullName>Web_Function__c</fullName>
    <description>From e-NDA form (web-to-case)</description>
    <inlineHelpText>From e-NDA form (web-to-case)</inlineHelpText>
    <label>Web Function</label>
    <length>100</length>
    <type>Text</type>
</CustomField>