force-app/main/default/objects/Case/fields/Web_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Web_Postal_Code__c</fullName>
    <description>From e-NDA form (web-to-case)</description>
    <inlineHelpText>From e-NDA form (web-to-case)</inlineHelpText>
    <label>Web Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>