force-app/main/default/objects/Case/fields/Web_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Web_Salutation__c</fullName>
    <description>From e-NDA form (web-to-case)</description>
    <inlineHelpText>From e-NDA form (web-to-case)</inlineHelpText>
    <label>Web Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>---</fullName>
                <default>true</default>
                <label>---</label>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>