force-app/main/default/objects/Case/fields/Web_State__c.field-meta.xml
<CustomField>
    <fullName>Web_State__c</fullName>
    <description>From e-NDA form (web-to-case)</description>
    <inlineHelpText>From e-NDA form (web-to-case)</inlineHelpText>
    <label>Web State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>