force-app/main/default/objects/Case/fields/Web_uB_Contact__c.field-meta.xml
<CustomField>
    <fullName>Web_uB_Contact__c</fullName>
    <description>From e-NDA form (web-to-case). uB Contact who has sent the e-NDA link to the Contact.</description>
    <inlineHelpText>From e-NDA form (web-to-case). uB Contact who has sent the e-NDA link to the Contact.</inlineHelpText>
    <label>Web uB Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>