force-app/main/default/objects/Case/recordTypes/Email_Case.recordType-meta.xml
<RecordType>
    <fullName>Email_Case</fullName>
    <active>true</active>
    <businessProcess>Support Process Email Case</businessProcess>
    <description>DO NOT USE. Used only for Cases created automatically through Email-to-Case</description>
    <label>Email Case</label>
</RecordType>