force-app/main/default/objects/Case/recordTypes/Legal_Case.recordType-meta.xml
<RecordType>
    <fullName>Legal_Case</fullName>
    <active>true</active>
    <businessProcess>Support Process Standard</businessProcess>
    <description>DO NOT USE. Used only for e-NDA, e-LULA-M and EUS (through web form)</description>
    <label>Legal Case</label>
</RecordType>