force-app/main/default/objects/Case/recordTypes/Support_Case.recordType-meta.xml
<RecordType>
    <fullName>Support_Case</fullName>
    <active>true</active>
    <businessProcess>Support Process Standard</businessProcess>
    <description>All support Cases.</description>
    <label>Support Case</label>
</RecordType>