force-app/main/default/objects/Case/validationRules/AE_Satisfaction_check.validationRule-meta.xml
<ValidationRule>
    <fullName>AE_Satisfaction_check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(AE_Satisfaction__c),
LEFT(TEXT($User.Team__c),2)&lt;&gt;&quot;AE&quot;)
/*
$User.ProfileId=&quot;00e20000000ki5l&quot;,
*/</errorConditionFormula>
    <errorDisplayField>AE_Satisfaction__c</errorDisplayField>
    <errorMessage>AE Satisfaction can be edited only by AE.</errorMessage>
</ValidationRule>