force-app/main/default/objects/Case/validationRules/Block_Email_Address_From_Creating_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Email_Address_From_Creating_Cases</fullName>
    <active>false</active>
    <errorConditionFormula>SuppliedEmail = &apos;do-not-reply@u-blox.com&apos;</errorConditionFormula>
    <errorMessage>Cases can not be created from &apos;do-not-reply@u-blox.com&apos; email address</errorMessage>
</ValidationRule>