force-app/main/default/objects/Case/validationRules/Close_with_new_mail.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_with_new_mail</fullName>
    <active>false</active>
    <description>Do not allow to Close if there are new Mails (checked with &quot;New Mail&quot; checkbox)</description>
    <errorConditionFormula>(ISPICKVAL(Status,&quot;Closed&quot;)||ISPICKVAL(Status,&quot;Waiting For Response&quot;))&amp;&amp;New_Mail__c</errorConditionFormula>
    <errorMessage>There is a new mail.</errorMessage>
</ValidationRule>