force-app/main/default/objects/Case/validationRules/Contact_Non_editable_for_Community_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Non_editable_for_Community_User</fullName>
    <active>true</active>
    <description>Contact Name can not be editable for community users.</description>
    <errorConditionFormula>AND(isChanged( ContactId),$Profile.Name !=&apos;System Administrator&apos;) &amp;&amp; ISPICKVAL(Origin , &quot;u-blox Portal&quot;)</errorConditionFormula>
    <errorMessage>Contact is not editable for community users.</errorMessage>
</ValidationRule>