force-app/main/default/objects/Case/validationRules/Effort_Spent_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Effort_Spent_Check</fullName>
    <active>true</active>
    <description>The field should be edited only by AE.</description>
    <errorConditionFormula>AND(
ISCHANGED(Effort_Spent__c),
LEFT(TEXT($User.Team__c),2)&lt;&gt;&quot;AE&quot;,
$Profile.Name &lt;&gt; &quot;Service RAE&quot;,
$Profile.Name &lt;&gt; &quot;R&amp;D&quot;,
$User.ProfileId&lt;&gt;&quot;00e20000000ki5l&quot;
)</errorConditionFormula>
    <errorDisplayField>Effort_Spent__c</errorDisplayField>
    <errorMessage>Effort Spent field can be edited only by AE.</errorMessage>
</ValidationRule>