force-app/main/default/objects/Case/validationRules/Make_closed_cases_non_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_closed_cases_non_editable</fullName>
    <active>true</active>
    <description>Make closed cases as non-editable for community user</description>
    <errorConditionFormula>AND(
PRIORVALUE(IsClosed) = True, 
$Profile.Name = &apos;Community Registered User&apos;
)</errorConditionFormula>
    <errorMessage>You can&apos;t edit this case, You are advised to create new case as current is closed.</errorMessage>
</ValidationRule>