force-app/main/default/objects/Case/listViews/AE_APAC_SER_Case.listView-meta.xml
<ListView>
    <fullName>AE_APAC_SER_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AE APAC SER</label>
    <queue>AE_APAC_SER</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>