force-app/main/default/objects/Case/listViews/AE_APAC_SHO_Case.listView-meta.xml
<ListView>
    <fullName>AE_APAC_SHO_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Initiator__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>AE APAC SHO</label>
    <queue>AE_APAC_SHO</queue>
    <sharedTo>
        <roleAndSubordinatesInternal>RegionAPAC</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>