force-app/main/default/objects/Case/listViews/AE_Cellular.listView-meta.xml
<ListView>
    <fullName>AE_Cellular</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Priority__c</columns>
    <columns>CASES.TYPE</columns>
    <columns>Product__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Escalation_Time__c</columns>
    <columns>Case_Initiator__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>AE CEL</value>
    </filters>
    <label>Team AE CEL</label>
    <sharedTo>
        <group>AE_CEL</group>
        <group>PS_CEL</group>
    </sharedTo>
</ListView>