force-app/main/default/objects/Case/listViews/AE_GNSS.listView-meta.xml
<ListView>
    <fullName>AE_GNSS</fullName>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Account_Priority__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Product__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Escalation_Time__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Effort_Spent__c</columns>
    <columns>Date_Escalated_by_TM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team__c</field>
        <operation>contains</operation>
        <value>AE POS</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Team AE POS</label>
    <sharedTo>
        <group>AE_POS</group>
        <group>PS_POS</group>
    </sharedTo>
</ListView>