force-app/main/default/objects/Case/listViews/AE_POS_All_Open.listView-meta.xml
<ListView>
    <fullName>AE_POS_All_Open</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Account_Priority__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Product__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Escalation_Time__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Date_Escalated_by_TM__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Technology__c</field>
        <operation>equals</operation>
        <value>GNSS</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Support_Case</value>
    </filters>
    <label>AE POS - All Open</label>
    <sharedTo>
        <group>AE_POS</group>
    </sharedTo>
</ListView>