force-app/main/default/objects/Case/listViews/AE_POS_RMA_Effort.listView-meta.xml
<ListView>
    <fullName>AE_POS_RMA_Effort</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Effort_Spent__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Product__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Escalated_To_AE_Pos__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2016 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Failure Analysis (RMA)</value>
    </filters>
    <label>AE POS  - RMA</label>
    <sharedTo>
        <group>AE_POS</group>
    </sharedTo>
</ListView>